eyes stop bleeding
помненял цвета
доработал средние разрешения
переработал высокие
на мобильных отображается норм

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
   height: 100%;
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling:touch;
+  background-color: #fbf7eb;
 }
 .wrapper {
   display: flex;
@@ -22,23 +23,27 @@ body {
 
 .header
 {margin-left:6%;
-padding-top:5%;
-padding-bottom:2%;}
+padding-top:3%;
+padding-bottom:2%;
+text-align: center;}
 
 .modal
 {
   box-sizing: border-box;
   /* width:31%; */
-width:340px;
- height:369px;
-  float:left;
+width:360px;
+ height:414px;
+
   display: none;
   margin-left: 8%;
-  margin-right: 5%;
-  margin-top: 7%;
 
-background: red;
-margin-top: 11%;
+
+background: #558c9d;
+
+
+float:right;
+margin-right: 17%;
+margin-top: 3%;
 
 text-align: center;}
 
@@ -51,17 +56,81 @@ text-align: center;}
 .text
 {
 float:left;
-margin-left: 6%;
+margin-left: 17%;
 /* width: 22%; */
 margin-top: 3%;
 text-align:left;
+
+
+  line-height: 1.4;
+  font-size: 21px;
 
 }
 
 
 .text
-{width:330px;}
+{width:350px;}
 
+
+@media screen and (max-width: 1300px)
+{
+  .modal
+  {
+  margin-right: 15%;
+
+
+
+
+  }
+
+  .text
+  {margin-left: 15%;}
+}
+
+@media screen and (max-width: 1250px)
+{
+  .modal
+  {width:350px;
+    height:414px;
+    margin-right:14%;
+  }
+  .text
+  {line-height: 1.4;
+  /* font-size: 19px;
+width:330px; */
+margin-left: 14%;}
+}
+
+@media screen and (max-width: 1170px)
+{
+  .modal
+  {
+  margin-right: 11%;
+
+
+
+
+  }
+
+  .text
+  {margin-left: 11%;}
+}
+
+
+@media screen and (max-width: 1100px)
+{
+  .modal
+  {
+  margin-right: 9%;
+
+
+
+
+  }
+
+  .text
+  {margin-left:9%;}
+}
 
 @media screen and (max-width: 990px) {
 
@@ -73,20 +142,25 @@ text-align:left;
     float:right;
     margin-right: 6%;
     margin-top: 7%;
+    width:340px;
+    height:369px;
 }
 
 .text
 {margin-top: 7%;
   line-height: 1.4;
-  font-size: 19px;}
+  font-size: 19px;
+width:330px;
+margin-left:6%;}
 
 .header
-{text-align: center;}
+{padding-top:5%;
+padding-bottom:2%;}
 }
 
 
 
-@media screen and (max-width: 843px) {
+@media screen and (max-width: 883px) {
 
 
 
@@ -102,88 +176,33 @@ text-align:left;
 {margin-left:2%;}
 }
 
-/* .text
-{font-size:16px;
-line-height:1.5;}
-
-
-} */
-
-/* @media screen and (max-width: 745px) {
+@media screen and (max-width: 745px) {
 
 
 
-  .modal
+  .modal, .text
   {
 
-    width:250px;
+    position: relative;
+    left:15%;
+        margin-left:0;
+        width:280px;
+      float: none;
 
 
 }
 
 .text
-{width:270px;}
-} */
-
-
-@media screen and (max-width: 645px) {
-
-
-
-  .modal
-  {
-
-    margin-left: 45%;
-    float: left;
-
+{
+  font-size: 16px;
 }
 
 
-}
-
-@media screen and (max-width: 634px) {
-
-
-
-  .modal
-  {
-
-    margin-left: 40%;
-
-}
 
 
 }
 
 
-@media screen and (max-width: 624px) {
-
-
-
-  .modal
-  {
-
-    margin-left: 35%;
-
-}
-
-
-}
-
-
-@media screen and (max-width: 424px) {
-
-
-
-  .modal
-  {
-
-    margin-left: 9%;
-
-}
-
-
-}
 
 
 
@@ -200,8 +219,8 @@ margin-bottom: 10px;}
 
 .logos
 {display: block;
-margin-right: 6%;
-margin-left:6%;
+margin-right: 17%;
+margin-left:17%;
 margin-top: 3%;
 margin-bottom:2%;
 }
@@ -251,6 +270,63 @@ margin-right: 5px;}
 
 #lastimg
 {margin-right: 0;}
+
+
+@media screen and (max-width: 1300px)
+{
+  .logos
+  {
+  margin-right: 15%;
+  margin-left:15%;
+
+  }
+}
+
+
+
+@media screen and (max-width: 1250px)
+{
+  .logos
+  {
+  margin-right: 14%;
+  margin-left:14%;
+
+  }
+}
+
+
+@media screen and (max-width: 1170px)
+{
+  .logos
+  {
+  margin-right: 11%;
+  margin-left:11%;
+
+
+  }
+}
+
+@media screen and (max-width: 1100px)
+{
+  .logos
+  {
+  margin-right: 9%;
+  margin-left:9%;
+}
+}
+
+@media screen and (max-width: 990px) {
+
+  .logos
+  {
+  margin-right: 6%;
+  margin-left:6%;
+}
+
+
+
+
+}
 
 
 @media screen and (max-width: 990px) {
